1999-10-20  Hippo

	* libs/Colorset.{h,c}: AllocColorset duplicates colorset 0 into new
	members.
	* libs/safemalloc.{h,c}: new function saferealloc().
	* fvwm/fvwm.c: colorset 0 defaults to black on grey in case FvwmTheme
	fails to start.
	* fvwm/fvwm2.1: Documented DefaultColorset command.
	* fvwm/*.c: clean up colorset references.

1999-10-20  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/session.c (matchWin): removed '#if 0 if (Restarting)' code
	(MatchWinToSM): commented the code, which, instead of restoring the
	original window stacking order when the state was saved, breaks it,
	until figuring what to do with this code

1999-10-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.h (SMSET_FOCUS_MODE):
	fixed focus policy

1999-10-18  Hippo

	* libs/Colorset: changed signature of AllocColorset
	* fvwm/functions.c: New function DefaultColorset
	* fvwm/builtins.c: New function DefaultColorset, DefaultColors does
	not mess with colorsets.

1999-10-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (executeModuleSync):
	made a small performance enhancement

1999-10-18  Olivier Chapuis  <olivier.chapuis@free.fr>

	* module_interface.c (executeModuleSync):  New logic in the
	executeModuleSynch loop. Ctl-Alt-Escape allows to exit from a
	ModuleSynchronous command.

1999-10-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c: moved most window creation stuff into separate
	functions; still in progress
	general cleanup

	* fvwm/move_resize.c (resize_window):
	the ButtonRelease after aborting a resize operation doesn't get passed
	to the window below anymore

1999-10-16  Eric Gillespie Jr.  <epg@pobox.com>

	* fvwm/conditional.c (MatchesConditionMask): Tests for the
	do_circulate_skip_shaded flag.

	* fvwm/session.c (MatchWinToSM): Sets whether window has the
	do_circulate_skip_shaded flag after session restart.

	* fvwm/window_flags.h (DO_SKIP_SHADED_CIRCULATE):
	(SET_DO_SKIP_SHADED_CIRCULATE):